# test_package

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/source/: test_package.rst
test_package/: test_package.py
tests/: test_test_package.py
