[tool.poetry]
name = "test_package"
version = "0.1.0"
description = "test python package"
authors = ["Arun Marria <arun.marria@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
